# xDR-Challenge-2023-EvaalAPI-server-access

./: .gitignore  .mise.toml  LICENSE  README.md  README_JP.md  do_downloading_trials.py  do_submitting_estimates.py  estimate_trajectory.py  pyproject.toml  requirements.txt  ruff.toml  run_trial_process.sh  score_trials.txt
dataset/2 2024-06-04 04-14-01/: Accelerometer.csv
dataset/ThreeDimensional/: Barometer.csv  Gyroscope.csv
dataset/ThreeDimensional/meta/: time.csv
dataset/example/: 02_output_example.ipynb  4_1_est.csv  4_1_pdr_est.csv
dataset/gis/: beacon_list.csv
dataset/src/: 8_1_pdr_est.csv  acc.csv  analysis.ipynb  ble_analysis.ipynb  gt_ref.csv  gyro.csv  main copy.ipynb  main.ipynb  main_ble.ipynb  main_ble2.ipynb  main_pdr copy.ipynb  main_pdr.ipynb  mgf.csv  multiple.py  pandera_test.py  qu.py  single.py  straight_angle.csv  time_filter_acc.csv
dataset/src/sub/: ble.py  drift.py  (+10 more)
dataset/trials/: 3_1_53_pdr.txt
src/: ble_analysis.ipynb  experiment.ipynb  gt.ipynb  main_pdr.ipynb  pdr_analysis.ipynb  single.py  stable_main_pdr.ipynb
src/notebook/: ThreeDimensional.ipynb  ble_analysis.ipynb  delete_nan_merged_beacon_stats_df.csv  drift.ipynb  experiment.ipynb  gt.ipynb  main_ble.ipynb  main_pdr.ipynb  pdr_analysis.ipynb  stable_main_pdr.ipynb  test.ipynb
src/sub/: ble.py  ble_fingerprint.py  drift.py  drift_waling_angle.py  estimate.py  google_drive.py  map_matching.py  pdr.py  pdr_direction.py  stable.py  threeDimensional.py  utils.py
submit/: estimate_trajectory_include_ble.py  estimate_trajectory_pdr.py  run_include_ble.sh  run_pdr.sh
(+23 files in other folders)
