[tool.poetry]
name = "xdr-challenge-2023-evaalapi-server-access"
version = "0.1.0"
description = ""
authors = ["happy663 <tatu2425@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.13.0"
pandera = "^0.18.3"
matplotlib = "^3.8.3"
google-api-python-client = "^2.125.0"
google-auth-oauthlib = "^1.2.0"
ahrs = "^0.3.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
